--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -44,9 +44,18 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
+        
+
         <footer>
-            <p>&copy; 2018 - Razor_Page</p>
+            <p>© 2017<a> TECHNOFIX </a>, All rights reserved 2016-2017.</p>
         </footer>
+        <script src="js/functionRegister.js" type="text/javascript"></script>
+        <script src="js/javascriptRegister.js" type="text/javascript"></script>
+        <!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+        <!-- Latest compiled JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </div>
 
     <environment include="Development">
