--- a/Views/Home/Producto.cshtml
+++ b/Views/Home/Producto.cshtml
@@ -3,17 +3,51 @@
 @{
     ViewData["Title"] = "Producto";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<address>
-     Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<button  type="button" class="btn btn-info " data-toggle="modal" data-target=".registro">	Registrar Producto</button>
 
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+
+          <!-- Modal -->
+          <div class="modal fade registro" id="myModall" role="dialog">
+            <div class="modal-dialog">
+
+              <!-- Modal content-->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title">Registro</h4>
+                </div>
+                <div class="modal-body">
+                  <div class="container">
+
+                    <div class="row">
+                      <div class="col-sm-6 col-md-6">
+                        <div class="panel panel-default">
+                          <div class="panel-body">
+                            <form accept-charset="UTF-8" action="" method="POST">
+                              <input type="email" placeholder="&#9993;  Correo" id="correo" required autofocus><br>
+                              <input type="text" placeholder="&#128100;  Usuario" id="usuario" required><br>
+                             <input type="password" placeholder="&#128273;  Contrase&ntilde;a" id="contrasenna" required><br>
+                             <input type="password" placeholder="&#128273;  Verificar Contrase&ntilde;a" id="ccontrasenna" required><br>
+                             <input type="number" placeholder="&#128241; Telefono" required id="telefono"><br>
+                              <input type="text" placeholder="&#9967;  Direccion" id="direccion" required><br>
+
+                              <button id="btnEnviar" class="btn btn-info" type="button">Registro</button>
+                            </form>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+
+
+                  <br>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
+              </div>
+                </div>
+            </div>
+  
