--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿  @{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Login";
 }
   <body id="body-register">
        
@@ -9,14 +9,14 @@
             <div class="jumbotron" id="fondoRegister">
                 <div class="bloque">
 
-                    <h2 class="leyenda"> Completar Registro</h2>
+                    <h2 class="leyenda"> Login</h2>
                     <br>
                     <br>
                     <input type="text" placeholder="&#128100;  Usuario" id="usuario" required><br>
                     <input type="password" placeholder="&#128273;  Contrase&ntilde;a" id="contrasenna" required><br>
                     
                     <br>
-                    <button  type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target=".registro">	Registrar</button>
+                    <button  type="button" class="btn btn-info " data-toggle="modal" data-target=".registro">	Registrar</button>
                     <a href="#"><button type="button"  id="addUserButton" class="btn btn-success">Acceder </button>    </a>
                     <br>
                 </div>
@@ -33,17 +33,16 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  <h4 class="modal-title">Mensaje</h4>
+                  <h4 class="modal-title">Registro</h4>
                 </div>
                 <div class="modal-body">
                   <div class="container">
 
                     <div class="row">
-                      <div class="col-sm-12 col-md-12">
+                      <div class="col-sm-6 col-md-6">
                         <div class="panel panel-default">
                           <div class="panel-body">
                             <form accept-charset="UTF-8" action="" method="POST">
-                              <input type="text" id="txtMensaje" class="form-control" name="message" placeholder="Escribir Mensaje"></input>
                               <input type="email" placeholder="&#9993;  Correo" id="correo" required autofocus><br>
                               <input type="text" placeholder="&#128100;  Usuario" id="usuario" required><br>
                              <input type="password" placeholder="&#128273;  Contrase&ntilde;a" id="contrasenna" required><br>
@@ -51,7 +50,7 @@
                              <input type="number" placeholder="&#128241; Telefono" required id="telefono"><br>
                               <input type="text" placeholder="&#9967;  Direccion" id="direccion" required><br>
 
-                              <button id="btnEnviar" class="btn btn-info" type="button">Enviar Mensaje</button>
+                              <button id="btnEnviar" class="btn btn-info" type="button">Registro</button>
                             </form>
                           </div>
                         </div>
@@ -69,7 +68,7 @@
               </div>
                 </div>
             </div>
-          </div>
+  
 
 
 
