--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">Login</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Producto">Producto</a></li>
                 </ul>
@@ -47,7 +47,7 @@
         
 
         <footer>
-            <p>© 2017<a> TECHNOFIX </a>, All rights reserved 2016-2017.</p>
+            <p>© 2018<a> Allan Developer </a>, All rights reserved</p>
         </footer>
         <script src="js/functionRegister.js" type="text/javascript"></script>
         <script src="js/javascriptRegister.js" type="text/javascript"></script>
