--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,94 +1,119 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
+﻿<div class="cars-horizon">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-9">
+                <div class="row py-2">
+                   <div class="col-md-7 car-image-block">
+                        <h3> Mil Fragancias</h3>
+                    </div>
+                 
+                    <button  type="button" class="btn btn-info " data-toggle="modal" data-target=".registro">	Carrito</button>
+                   <div class="col-md-2 pt-1">
+                       <a href="#"><i class="fa fa-th fa-2x pr-2"></i> </a>
+                       <a href="#"><i class="fa fa-list-ul fa-2x"></i> </a>
+                        
+                        
+                   </div>
+               
+                </div>
+                
+                 <div class="row mt-3 border">
+                    
+                    <div class="col-md-4 car-image-block">
+                        <a href="#"><img src="http://www.elolfatista.com/wp-content/uploads/2012/07/colonias-y-perfumes-23.jpg"></a>
+                    </div>
+                    <div class="col-md-8 card-body ">
+                        <a href="#"><h3>Dino</h3> </a>
+                        
+                        <h5>50,000</h5>
+                        <ul class="list-inline">
+                            <li class="list-inline-item">350Oz</li>
+                             <li class="list-inline-item">Femenino</li>
+                             <li class="list-inline-item">Stok</li>
+                        </ul>
+                        <button type="button" class="btn btn-outline-danger">Añadir al carrito</button>
+                    </div>
+                            
+        </div><br>
+                 <div class="row mt-3 border">
+                    
+                    <div class="col-md-4 car-image-block">
+                        <a href="#"><img src="https://fimgs.net/images/perfume/375x500.10625.jpg"></a>
+                    </div>
+                    <div class="col-md-8 card-body ">
+                        <a href="#"><h3>Antonio Miro</h3> </a>
+                        
+                        <h5>30,000</h5>
+                        <ul class="list-inline">
+                            <li class="list-inline-item">350Oz</li>
+                             <li class="list-inline-item">Masculino</li>
+                             <li class="list-inline-item">Stok</li>
+                        </ul>
+                        <button type="button" class="btn btn-outline-danger">Añadir al carrito</button>
+                    </div>
+                            
+        </div><br>
+                <div class="row mt-3 border">
+                    
+                    <div class="col-md-4 car-image-block">
+                        <a href="#"><img src="https://fimgs.net/images/perfume/375x500.10625.jpg"></a>
+                    </div>
+                    <div class="col-md-8 card-body ">
+                        <a href="#"><h3>Antonio Miro</h3> </a>
+                        
+                        <h5>30,000</h5>
+                        <ul class="list-inline">
+                            <li class="list-inline-item">350Oz</li>
+                             <li class="list-inline-item">Masculino</li>
+                             <li class="list-inline-item">Stok</li>
+                        </ul>
+                        <button type="button" class="btn btn-outline-danger">Añadir al carrito</button>
+                    </div>
+                            
+        </div><br>
+              
+                
             </div>
         </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
+        
     </div>
 </div>
+<div class="modal fade registro" id="myModall" role="dialog">
+            <div class="modal-dialog">
+
+              <!-- Modal content-->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title">Registro</h4>
+                </div>
+                <div class="modal-body">
+                  <div class="container">
+
+                    <div class="row">
+                      <div class="col-sm-6 col-md-6">
+                        <div class="panel panel-default">
+                          <div class="panel-body">
+                            <form accept-charset="UTF-8" action="" method="POST">
+                             
+                             
+
+                              <button id="btnEnviar" class="btn btn-info" type="button">Comprar</button>
+                            </form>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+
+
+                  <br>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
+              </div>
+                </div>
+            </div>
+  
