--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -35,3 +35,6 @@ body {
         display: none;
     }
 }
+img {width:100%;}
+.car-image-block {padding:0px;margin:0px;}
+.car-image-block img {min-height: 200px; overflow: hidden;}
