--- a/Views/Home/Producto.cshtml
+++ b/Views/Home/Producto.cshtml
@@ -4,6 +4,80 @@
     ViewData["Title"] = "Producto";
 }
 
+@if(Session.isSingin){
+<strong class="strong">LIST OF YOURS PRODUCTS</strong>
+<br>
+<br>
+<div class="table-responsive">
+<table class="table table-hover">
+    <thead>
+        <tr>
+                <th>
+                   Nombre
+                </th>
+                <th>
+                    Descripcion
+                </th>
+                <th>
+                 Cantidad
+                </th>
+            <th>
+                Precio
+            </th>
+            <th>
+               Activo
+            </th>
+            <th>
+               Tipo Producto
+            </th>
+            <th>
+               Imagen
+            </th>
+            
+            <th>Settings</th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Descripcion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cantidad )
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Precio)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Activo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TipoProducto.tipo)
+            </td>
+            
+            <td>
+                @Html.DisplayFor(modelItem => item.Imagen.Imagen)
+            </td>
+          
+            <td>
+                <a class="glyphicon glyphicon-pencil" asp-action="Edit" asp-route-id="@item.ID"></a>
+                <a class="glyphicon glyphicon-duplicate" asp-action="Details" asp-route-id="@item.ID"></a> 
+                <a class="glyphicon glyphicon-remove-circle" asp-action="Delete" asp-route-id="@item.ID"></a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
+<button type="button" class="btn btn-secondary center-block"> <a asp-action="Create">Create New</a></button>
+</div>
+}
+
+
+
 <button  type="button" class="btn btn-info " data-toggle="modal" data-target=".registro">	Registrar Producto</button>
 
 
