Repair model Carrito

--- a/Views/Home/Producto.cshtml
+++ b/Views/Home/Producto.cshtml
@@ -58,9 +58,9 @@
             
           
             <td>
-                <a class="glyphicon glyphicon-pencil" asp-action="Edit" asp-route-id="@item.ID"></a>
-                <a class="glyphicon glyphicon-duplicate" asp-action="Details" asp-route-id="@item.ID"></a> 
-                <a class="glyphicon glyphicon-remove-circle" asp-action="Delete" asp-route-id="@item.ID"></a>
+                <a class="glyphicon glyphicon-pencil" asp-action="Editar" asp-route-id="@item.ID"></a>
+                <a class="glyphicon glyphicon-duplicate" asp-action="Detalles" asp-route-id="@item.ID"></a> 
+                <a class="glyphicon glyphicon-remove-circle" asp-action="Eliminar" asp-route-id="@item.ID"></a>
             </td>
         </tr>
 }
