--- a/Views/Home/Producto.cshtml
+++ b/Views/Home/Producto.cshtml
@@ -93,12 +93,14 @@
                         <div class="panel panel-default">
                           <div class="panel-body">
                             <form accept-charset="UTF-8" action="" method="POST">
-                              <input type="email" placeholder="&#9993;  Correo" id="correo" required autofocus><br>
-                              <input type="text" placeholder="&#128100;  Usuario" id="usuario" required><br>
-                             <input type="password" placeholder="&#128273;  Contrase&ntilde;a" id="contrasenna" required><br>
-                             <input type="password" placeholder="&#128273;  Verificar Contrase&ntilde;a" id="ccontrasenna" required><br>
-                             <input type="number" placeholder="&#128241; Telefono" required id="telefono"><br>
-                              <input type="text" placeholder="&#9967;  Direccion" id="direccion" required><br>
+                              <input type="text" placeholder="&#9993;  Nombre" id="nombre" required autofocus><br>
+                              <input type="text" placeholder="&#128100;  Descripcion" id="descripcion" required><br>
+                             <input type="number" placeholder="&#128273;  Cantidad" id="cantidad" required><br>
+                             <input type="number" placeholder="&#128273;  Precio"id="precio" required><br>
+                             <input type="text" placeholder="&#128241; Activo" required id="activo"><br>
+                             <input type="text" placeholder="&#128241; ImagenId" required id="ImagenId"><br>
+                             <input type="text" placeholder="&#128241; TipoProductoId" required id="TipoProductoId"><br>
+                             
 
                               <button id="btnEnviar" class="btn btn-info" type="button">Registro</button>
                             </form>
